--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,34 +1,11 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>hello phaser!</title>
-        <script src="lib/phaser/build/phaser.min.js"></script>
-    </head>
-    <body>
-
-    <script type="text/javascript">
-
-    window.onload = function() {
-
-        var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create });
-
-        function preload () {
-
-            game.load.image('logo', 'img/phaser.png');
-
-        }
-
-        function create () {
-
-            var logo = game.add.sprite(game.world.centerX, game.world.centerY, 'logo');
-            logo.anchor.setTo(0.5, 0.5);
-
-        }
-
-    };
-
-    </script>
-
-    </body>
+<head>
+<meta charset="UTF-8" />
+<title>hello phaser!</title>
+<script src="lib/phaser/build/phaser.min.js"></script>
+</head>
+<body>
+	<script type="text/javascript" src="js/main.js"></script>
+</body>
 </html>
