ADDED: a game scene with a very simple game.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,15 +14,17 @@ body {
 <script src="js/scenes/Preloader.js"></script>
 <script src="js/scenes/MainMenu.js"></script>
 <script src="js/scenes/Credits.js"></script>
+<script src="js/scenes/GameScene.js"></script>
 </head>
 <body>
 	<script type="text/javascript">
 		(function() {
-			var game = new Phaser.Game(800, 600, Phaser.AUTO, 'game');
+			var game = new Phaser.Game(640, 480, Phaser.AUTO, 'game');
 			game.state.add('Bootloader', Scene.Bootloader);
 			game.state.add('Preloader', Scene.Preloader);
 			game.state.add('MainMenu', Scene.MainMenu);
 			game.state.add('Credits', Scene.Credits);
+			game.state.add('GameScene', Scene.GameScene);
 			game.state.start('Bootloader');
 		})();
 	</script>
