--- a/www/index.html
+++ b/www/index.html
@@ -10,28 +10,9 @@ body {
 }
 </style>
 <script src="lib/phaser/build/phaser.min.js"></script>
-<script src="js/util/utils.js"></script>
-<script src="js/scenes/Bootloader.js"></script>
-<script src="js/scenes/Preloader.js"></script>
-<script src="js/scenes/MainMenu.js"></script>
-<script src="js/scenes/Credits.js"></script>
-<script src="js/scenes/GameScene.js"></script>
-<script src="js/scenes/Win.js"></script>
-<script src="js/scenes/Lose.js"></script>
+<script src="js/game-bp.js"></script>
 </head>
 <body>
-	<script type="text/javascript">
-		(function() {
-			var game = new Phaser.Game(640, 480, Phaser.AUTO, 'game');
-			game.state.add('Bootloader', Scene.Bootloader);
-			game.state.add('Preloader', Scene.Preloader);
-			game.state.add('MainMenu', Scene.MainMenu);
-			game.state.add('Credits', Scene.Credits);
-			game.state.add('GameScene', Scene.GameScene);
-			game.state.add('Win', Scene.Win);
-			game.state.add('Lose', Scene.Lose);
-			game.state.start('Bootloader');
-		})();
-	</script>
+    <div id="content"></div>
 </body>
 </html>
